added some dynamic js

--- a/fretboard/index.html
+++ b/fretboard/index.html
@@ -8,99 +8,6 @@
     <title>Fretboard</title>
   </head>
   <body>
-    <div class="fretboard">
-      <div class="string">
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret single-fretmark"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret single-fretmark"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret single-fretmark"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret single-fretmark"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret">
-          <div class="double-fretmark"></div>
-        </div>
-      </div>
-      <div class="string">
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-      </div>
-      <div class="string">
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-      </div>
-      <div class="string">
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-      </div>
-      <div class="string">
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-      </div>
-      <div class="string">
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-        <div class="note-fret"></div>
-      </div>
-    </div>
+    <div class="fretboard"></div>
   </body>
 </html>
