--- a/fretboard/index.html
+++ b/fretboard/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
+      rel="stylesheet"
+    />
+
     <script src="app.js" async defer></script>
     <title>Fretboard</title>
   </head>
   <body>
+    <div class="settings">
+      <label for="instrument-selector">Selected instrument</label>
+      <select name="instrument-selector" id="instrument-selector"> </select>
+      <div class="accidental-selector">
+        <input
+          type="radio"
+          class="acc-select"
+          id="flats"
+          name="accidentals"
+          value="flats"
+          checked
+        />
+        <label for="flats">♭</label>
+        <input
+          type="radio"
+          class="acc-select"
+          id="sharps"
+          name="accidentals"
+          value="sharps"
+        />
+        <label for="sharps">♯</label>
+      </div>
+    </div>
     <div class="fretboard"></div>
   </body>
 </html>
