added text note names

--- a/fretboard/index.html
+++ b/fretboard/index.html
@@ -46,5 +46,6 @@
       <input type="checkbox" id="show-multiple-notes" />
     </div>
     <div class="fretboard"></div>
+    <div class="note-name-section"></div>
   </body>
 </html>
